--- a/src/style.css
+++ b/src/style.css
@@ -64,19 +64,7 @@
 .rotate_button_hide {
   display: none;
 }
-.attack_button_hide {
-  display: none;
-}
-.attack_button_appear {
-  display: block;
-  background-color: rgb(7, 7, 7);
-  color: white;
-  font-size: 1.2rem;
-  font-weight: bolder;
-  width: 150px;
-  height: 50px;
-  border-radius: 3px;
-}
+
 .message_board {
   display: flex;
   justify-content: center;
@@ -98,5 +86,30 @@
 .both_containers {
   display: flex;
   justify-content: space-around;
-  align-items: flex-end;
+  align-items: center;
+}
+
+.start_button_container {
+  width: 200px;
+}
+
+.start_game {
+  background-color: rgb(7, 7, 7);
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bolder;
+  width: 150px;
+  height: 50px;
+  border-radius: 3px;
+  visibility: hidden;
+}
+
+.mark_hit {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: red;
+  font-size: 1.2rem;
+  font-weight: bolder;
+  align-items: center;
 }
