--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,15 @@
   --grid-rows: 1;
 }
 
+@font-face {
+  font-family: game_font;
+  src: url(../Emulogic-zrEw.ttf);
+}
+body {
+  background-color: #23143c;
+  font-family: game_font;
+}
+
 .container {
   display: grid;
   height: 500px;
@@ -16,36 +25,37 @@
 
 .grid-item {
   padding: 1.5rem;
-  border: 0.1px solid rgb(0, 255, 242);
+  border: 2px solid #67b3b5;
   background-color: rgba(255, 255, 255, 0.877);
   text-align: center;
-  cursor: pointer;
+  cursor: url(../Crosshairs\ 2\ green.cur), pointer;
 }
 
 .grid-item1 {
   padding: 1.5rem;
-  border: 0.1px solid rgb(0, 255, 242);
+  border: 2px solid #67b3b5;
   background-color: rgba(255, 255, 255, 0.877);
   text-align: center;
-  cursor: pointer;
+  cursor: url(../Crosshairs\ 2\ green.cur), pointer;
 }
 .player_name {
   text-align: center;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: bold;
+  color: rgb(129, 51, 125);
 }
 
 .title_header {
   height: 80px;
-  background-color: rgb(73, 72, 72);
-  font-size: 1.5rem;
-  color: white;
+  background-color: #23143c;
+  font-size: 2rem;
+  color: rgb(49, 126, 72);
   padding-bottom: 10px;
   text-align: center;
 }
 
 .ship {
-  background-color: rgb(73, 72, 72);
+  background-color: rgb(28, 59, 44);
 }
 
 .button-container {
@@ -53,12 +63,13 @@
 }
 .rotate_button {
   background-color: rgb(7, 7, 7);
-  color: white;
-  font-size: 1.2rem;
+  color: rgb(177, 177, 13);
+  font-size: 0.6rem;
   font-weight: bolder;
   width: 150px;
   height: 50px;
   border-radius: 3px;
+  font-family: game_font;
 }
 
 .rotate_button_hide {
@@ -75,6 +86,7 @@
   width: 500px;
   height: 50px;
   padding-top: 10px;
+  color: rgb(79, 79, 236);
 }
 .message_container {
   display: flex;
