--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,12 @@ body {
   background-color: #23143c;
   font-family: game_font;
 }
+#container1 {
+  visibility: hidden;
+}
+#enemy_name {
+  visibility: hidden;
+}
 
 .container {
   display: grid;
@@ -46,7 +52,7 @@ body {
 }
 
 .title_header {
-  height: 80px;
+  height: 60px;
   background-color: #23143c;
   font-size: 2rem;
   color: rgb(49, 126, 72);
@@ -55,7 +61,7 @@ body {
 }
 
 .ship {
-  background-color: rgb(28, 59, 44);
+  background-color: rgb(55, 238, 18);
 }
 
 .button-container {
@@ -80,13 +86,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid black;
+
   border-radius: 5px;
   text-align: center;
   width: 500px;
   height: 50px;
   padding-top: 10px;
-  color: rgb(79, 79, 236);
+  color: rgb(177, 177, 13);
 }
 .message_container {
   display: flex;
@@ -97,17 +103,20 @@ body {
 
 .both_containers {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
 .start_button_container {
-  width: 200px;
+  /* width: 800px;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .start_game {
   background-color: rgb(7, 7, 7);
-  color: white;
+  color: rgb(177, 177, 13);
   font-size: 1.2rem;
   font-weight: bolder;
   width: 150px;
@@ -120,10 +129,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(199, 129, 129);
-  font-size: 10px;
+  background-color: rgb(168, 49, 49);
+  font-size: 1rem;
   font-weight: bolder;
   align-items: center;
+  color: red;
 }
 .mark_green {
   display: flex;
